k8s/talos/apps/innestemme/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: innestemme
  namespace: innestemme
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - jarvis.local.bigd.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: innestemme
          port: 9090
          weight: 1
